pkg/front_end/testcases/inference/map_literals.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference/map_literals.dart:11:26: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n  x /*@target=Map::[]=*/ [\n                         ^", "pkg/front_end/testcases/inference/map_literals.dart:13:26: Error: A value of type 'dart.core::double' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n  x /*@target=Map::[]=*/ [\n                         ^", "pkg/front_end/testcases/inference/map_literals.dart:15:26: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n  x /*@target=Map::[]=*/ [3] = /*error:INVALID_ASSIGNMENT*/ 42;\n                         ^", "pkg/front_end/testcases/inference/map_literals.dart:26:26: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::num'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::num'.\n  x /*@target=Map::[]=*/ [\n                         ^", "pkg/front_end/testcases/inference/map_literals.dart:29:26: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::Pattern'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::Pattern'.\n  x /*@target=Map::[]=*/ [3] = /*error:INVALID_ASSIGNMENT*/ 42;\n                         ^"]/* from null */;
static method test1() → dynamic {
  core::Map<core::int, core::String> x = <core::int, core::String>{1: "x", 2: "y"};
  x.{core::Map::[]=}(3, "z");
  x.{core::Map::[]=}("hi" as{TypeError} core::int, "w");
  x.{core::Map::[]=}(4.0 as{TypeError} core::int, "u");
  x.{core::Map::[]=}(3, 42 as{TypeError} core::String);
  core::Map<core::num, core::String> y = x;
}
static method test2() → dynamic {
  core::Map<core::num, core::Pattern> x = <core::num, core::Pattern>{1: "x", 2: "y", 3.0: core::RegExp::•(".")};
  x.{core::Map::[]=}(3, "z");
  x.{core::Map::[]=}("hi" as{TypeError} core::num, "w");
  x.{core::Map::[]=}(4.0, "u");
  x.{core::Map::[]=}(3, 42 as{TypeError} core::Pattern);
  core::Pattern p = null;
  x.{core::Map::[]=}(2, p);
  core::Map<core::int, core::String> y = x as{TypeError} core::Map<core::int, core::String>;
}
static method main() → dynamic {}
